--- a/packages/koa/package.json
+++ b/packages/koa/package.json
@@ -8,15 +8,6 @@
   "files": [
     "dist"
   ],
-  "scripts": {
-    "clean": "rm -rf dist",
-    "start": "ts-node src/index.ts",
-    "dev": "nodemon -e ts -w ./src -x npm run start",
-    "build:esm": "tsc -p tsconfig.json --outDir src --module es2015 --sourceMap --outDir dist/esm",
-    "build:cjs": "tsc -p tsconfig.json --outDir src --module commonjs --sourceMap --outDir dist/cjs",
-    "build:types": "tsc -p tsconfig.json --outDir src --emitDeclarationOnly --declarationMap --declaration --declarationDir dist/types",
-    "build": "npm run build:esm && npm run build:cjs && npm run build:types"
-  },
   "dependencies": {
     "@koa/cors": "^3.1.0",
     "koa": "^2.13.0",
@@ -25,9 +16,8 @@
     "koa-compose": "^4.1.0",
     "koa-compress": "^4.0.1",
     "koa-helmet": "^5.2.0",
-    "koa-router": "^9.0.1"
-  },
-  "devDependencies": {
+    "koa-router": "^9.0.1",
+    "react-scripts": "3.4.0",
     "@types/koa-cache-control": "^2.0.1",
     "@types/koa-compose": "^3.2.5",
     "@types/koa-compress": "^4.0.0",
@@ -38,5 +28,14 @@
     "nodemon": "^2.0.4",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.5"
+  },
+  "scripts": {
+    "clean": "rm -rf dist",
+    "start": "ts-node src/index.ts",
+    "dev": "nodemon -e ts -w ./src -x npm run start",
+    "build:esm": "tsc -p tsconfig.json --outDir src --module es2015 --sourceMap --outDir dist/esm",
+    "build:cjs": "tsc -p tsconfig.json --outDir src --module commonjs --sourceMap --outDir dist/cjs",
+    "build:types": "tsc -p tsconfig.json --outDir src --emitDeclarationOnly --declarationMap --declaration --declarationDir dist/types",
+    "build": "npm run build:esm && npm run build:cjs && npm run build:types"
   }
 }
