--- a/package.json
+++ b/package.json
@@ -15,5 +15,18 @@
     "lint:www": "lerna run lint --scope=boutique-www",
     "lint:api": "lerna run lint --scope=boutique-api",
     "lint": "lerna run lint --scope={boutique-api,boutique-www}"
+  },
+  "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^3.6.0",
+    "@typescript-eslint/parser": "^3.6.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-react-app": "^5.2.1",
+    "eslint-plugin-flowtype": "^5.2.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.3",
+    "eslint-plugin-react-hooks": "^4.0.6"
   }
 }
